fix(modal): darker backdrop in dark mode

--- a/packages/core/src/components/modal/modal-vars.scss
+++ b/packages/core/src/components/modal/modal-vars.scss
@@ -5,6 +5,6 @@
 }
 
 .tds-mode-dark {
-  --tds-modal-backdrop-background: rgba(0, 0, 0, 0.6);
+  --tds-modal-backdrop-background: rgba(0, 0, 0, 0.8);
   --tds-modal-box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1), 0 -1px 1px 0 rgba(0, 0, 0, 0.05);
 }
